# python-starter

./: LICENSE  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: publish-gcloud-python-package.yml
src/collections2/: add.py
src/python_starter/: __init__.py  add.py  ops.py
tests/: test_add.py  test_ops.py
